5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4181/executions/1644_1054.log
== TEST (2019-04-16 14:27:21) 
-- CODE:
x = float(input("X"))
y = float(input("y"))
reta=2x+y
if(reta == 3):
	msg= "ponro pertence a reta"
else:
	msg= "ponto nao pertence a reta"
print(msg)

-- ERROR:
File "XXXX", line 3
    reta=2x+y
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:27:42) 
-- CODE:
x = float(input("X"))
y = float(input("y"))
reta=2x+y
if(reta == 3):
	msg= "ponro pertence a reta"
else:
	msg= "ponto nao pertence a reta"
print(msg)

-- ERROR:
File "XXXX", line 3
    reta=2x+y
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:27:58) 
-- CODE:
x = float(input("X"))
y = float(input("y"))
reta = 2x+y
if(reta == 3):
	msg= "ponro pertence a reta"
else:
	msg= "ponto nao pertence a reta"
print(msg)

-- ERROR:
File "XXXX", line 3
    reta = 2x+y
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:28:16) 
-- CODE:
x = float(input("X"))
y = float(input("y"))
reta = 2*x+y
if(reta == 3):
	msg= "ponro pertence a reta"
else:
	msg= "ponto nao pertence a reta"
print(msg)

-- OUTPUT:
ponro pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:28:26) 
-- CODE:
x = float(input("X"))
y = float(input("y"))
reta = 2*x+y
if(reta == 3):
	msg= "ponro pertence a reta"
else:
	msg= "ponto nao pertence a reta"
print(msg)

-- EXECUTION TIME:
0.152279
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponro pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertence a reta
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:28:42) 
-- CODE:
x = float(input("X"))
y = float(input("y"))
reta = 2*x+y
if(reta == 3):
	msg= "ponto pertence a reta"
else:
	msg= "ponto nao pertence a reta"
print(msg)

-- OUTPUT:
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:28:50) 
-- CODE:
x = float(input("X"))
y = float(input("y"))
reta = 2*x+y
if(reta == 3):
	msg= "ponto pertence a reta"
else:
	msg= "ponto nao pertence a reta"
print(msg)

-- EXECUTION TIME:
0.149143
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertence a reta
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
